# fastapi-advertising-prediction

./: LICENSE  README.md  requirements.txt  setup.cfg
fastapi_advertising_prediction/: main.py  requirements.txt  train.py
src/fastapi_advertising_prediction/: 03.randomforest_with_advertising.pkl  main.py  requirements.txt  run_train.py  schemas.py  train.py
